# tracer

./: Cargo.toml  build.rs
assets/shaders/: raytrace.rchit  raytrace.rgen  raytrace.rmiss  tonemap.frag  tonemap.vert  ui.frag  ui.vert
assets/shaders/common/: descriptors.glsl
crates/rdx_renderer/: Cargo.toml
crates/rdx_renderer/src/: acceleration_structures.rs  buffer.rs  command_buffer.rs  device.rs  encoder.rs  image.rs  lib.rs  resources.rs  shader.rs  util.rs
crates/rdx_renderer/src/pipeline/: mod.rs  raster_pipeline.rs  ray_tracing_pipeline.rs
crates/rdx_renderer/src/renderer/: mod.rs
crates/rdx_renderer/src/renderer/pass/: mod.rs  raster_pass.rs  raytracing_pass.rs  tonemap_pass.rs
src/: camera_controller.rs  main.rs  material.rs
src/gltf/: gltf_loader.rs  mod.rs
src/render/: acceleration_structures.rs  buffer.rs  command_buffer.rs  debug.rs  descriptor.rs  device.rs  encoder.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  physical_device.rs  queue.rs  render_context.rs  render_pass.rs  renderer.rs  resources.rs  shader.rs  surface.rs  swapchain.rs  vertex.rs
src/render/mesh/: conversions.rs  mod.rs
src/render/pass/: mod.rs  raster_pass.rs  raytracing_pass.rs  tonemap_pass.rs  ui_pass.rs
src/render/pipeline/: graphics_pipeline.rs  mod.rs  raster_pipeline.rs  ray_tracing_pipeline.rs  vertex_format.rs
