[package]
name = "rdx"
version = "0.1.0"
authors = ["Gonçalo Soares <goncalofds@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bevy = { version = "0.5" , default-features = false, features = ["bevy_winit"]}
rdx_renderer = { path = "crates/rdx_renderer" }

# Tracing
tracing = "0.1"

glam = "0.17"
