[package]
name = "rdx"
version = "0.1.0"
authors = ["Gonçalo Soares <goncalofds@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit"] }
serde = { version = "1.0", features = ["derive"] }

# Math (needs to be the same version that bevy uses)
glam = { version = "0.13", features = ["transform-types", "mint"] }

mint = "0.5"
crevice = "0.6"
bytemuck = "1.7"

# Graphics
erupt = "0.19"
gpu-alloc-erupt = "0.5"
gpu-alloc = "0.4"

# Windowing (needs to be the same version that bevy uses)
winit = "0.24"

# Tracing
tracing = "0.1"

memoffset = "0.6"
slab = "0.4"
parking_lot = "0.11"
smallvec = "1.6.1"
lru = "0.6"
bumpalo = { version = "3.7" , features = ["collections"]}

egui = "0.13"
